--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div id="logos">
-        <a href="https://twitter.com/168luckycoin" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-telegram"></i></a>
+        <a href="https://twitter.com/LuckyCoin168" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://t.me/LuckyCoin168Portal" target="_blank"><i class="fab fa-telegram"></i></a>
         <a href="#" target="_blank"><i class="fas fa-chart-line"></i></a>
         <a href="#" target="_blank"><i class="fab fa-ethereum"></i></a>
 
